--- a/testMVC/Views/Products/ProductDetailView.cshtml
+++ b/testMVC/Views/Products/ProductDetailView.cshtml
@@ -1,1 +1,29 @@
-﻿Product detail
+﻿@model TestMVC.ViewModels.ProductForDisplayViewModel
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-9">
+            <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.ImageInByte))">
+        </div>
+        <div class="col-3">
+            <div class="row">
+                <div class="col-3" style="padding: 0;">
+                    <a style="width:100%" class="btn btn-success" asp-area="" asp-controller="Products" asp-action="Buy" asp-route-productId="@Model.Id">Buy</a>
+                </div>
+                <div class="col-4" style="padding: 0; padding-left:20px;">
+                    <select class="form-control" id="exampleFormControlSelect1">
+                        @for (int i = 1; i <= 10; i++)
+                        {
+                            <option>@i</option>
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <label>@Model.LongDescription</label>
+        </div>
+    </div>
+</div>
